--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MovieReview - Home</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" type="images/png" href="clapperboard.png">
-    <script src="js/movies.js"></script>
+    <script type="module" src="js/movies.js"></script>
 </head>
 <body>
 
