Made search bar in modal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieReview - Home</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/moviesearch.css">
     <link rel="shortcut icon" type="images/png" href="clapperboard.png">
     <script type="module" src="js/movies.js"></script>
   
@@ -33,6 +34,10 @@
             <div class="movielistbox">
                 <span class="close">&times;</span>
                 <h2>Select a Movie</h2>
+                <div class="search-container">
+                    <input type = "text" placeholder="Search...">
+                    <button type="submit">Search</button>
+                </div>
                 <p>Movies</p>
             </div>
         </div>
