Removed Search Button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                       <h2>Select a Movie</h2>     
                       <div class="search-container">         
                         <input type="text" placeholder="Search..." id="searchInput" id = >
-                        <button type="submit" id="search">Search</button>
+                        <!--<button type="submit" id="search">Search</button>-->
                         </div>
                       
                       <div class = "movie-container" id = "movie-container">
