Early version of Reviewlistbox interface

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 <div class = "reviewlist">
                     <div class="reviewlistbox">
                         <span class="close">&times;</span>
-                        <p>This is the Review modal</p>
+                        <h2>Thoughts on the film?</h2>
+                        <textarea id="ReviewInput" rows="8"></textarea>
                     </div>
                 </div>
 
